# giterdone

./: Cargo.toml  README.md  go.mod  go.sum  main.go
.github/workflows/: release.yml
config/: config.go
cron/: cron.go
git/: git.go
scanner/: scanner.go
src/: cli.rs  config.rs  git.rs  logger.rs  main.rs  scanner.rs  scheduler.rs  ssh.rs
utils/: helpers.go
